# raag

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  NEXT-SESSION.md  raag-project-plan.md  start.sh
backend/: alembic.ini  celery_app.py  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: auth.py  chat.py  conversations.py  deps.py  graph.py  ingestion.py  lyrics_sync.py  songs.py  spotify.py
backend/app/db/: postgres.py  qdrant.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 044362079252_add_conversations_and_messages.py  36bbaac69e4e_initial.py  cb0f4edb75b3_add_users_table.py
backend/app/ingestion/: audio_manager.py  genius.py  pipeline.py  tasks.py  youtube_downloader.py
backend/app/mcp/: server.py  types.py
backend/app/mcp/tools/: context.py  search.py
backend/app/ml/audio/: clap_encoder.py  librosa_features.py  segment_detector.py
backend/app/ml/lyrics/: chunker.py  embedder.py
backend/app/ml/nlp/: bar_annotator.py  entity_extractor.py  lyric_timer.py  rhyme_annotator.py  topic_classifier.py
backend/tests/: test_mcp_tools.py
frontend/: next.config.ts  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  template.tsx
frontend/src/lib/: album-art.ts  api.ts  auth-store.ts  constants.ts  spotify-store.ts  (+6 more)
ml/scripts/: batch_download_and_ingest.py  batch_ingest.py  batch_ingest_all.py  ingest_no_nlp.py  reannotate_bars.py  reorganize_audio.py  run_nlp.py  seed_discography.py  smart_download.py  test_rhyme_detection.py  verify_setup.py
scripts/: download-album.sh
(+48 files in other folders)
